--- a/index.html
+++ b/index.html
@@ -2,71 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-    <style>
-        h1 {
-            background-color: red ;
-        }
-        span {
-            color: green;
-            font-size: 40pt;
-        }
-        .degreeFigure {
-          width: 40%;
-            display: inline-block;
-            margin: 10px;
-        }
-        .row {
-          display:flex;
-          flex-wrap:wrap;  /* wraps content */
-          justify-content:space-evenly; /*centers horizontally*/
-          align-items:center; /*centers vertically*/
-
-        }
-
-        .image {
-          width: 100%;
-          height: 300px;
-          border: 5px solid black;
-          object-fit: cover;
-        }
-        .caption{
-          text-align: center;
-        }
-
-        h1:active {
-          background-color: yellow;
-        }
-
-    </style>
-    <span>
-
-    </span>
+    <meta name="viewport" content="width=
+    , initial-scale=1.0">
+    <title>Team 19</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <h1 style = "color: blue; background-color: yellow; text-align: center;" > School of Computing and Design  </h1>
-    <p>  The <span>School of Computing & Design (SCD)</span> educates students to apply state-of-the-art information technology to solve real world communication problems in a socially responsible way.</p>
-  <h2> Degree programs </h2>
-    <div class = "row">
-      <figure class="degreeFigure">
-        <img src="https://tinyurl.com/cd-image" class="image" width="100">
-        <figcaption class="caption" > Communication Design </figcaption>
-      </figure>
-      <figure class="degreeFigure">
-         <img src="https://tinyurl.com/cs-image" class="image" width="100">
-         <figcaption class="caption" > Computer Science </figcaption>
-      </figure>
+    <div class="header">
+        <h1>Team 19</h1>
+        <hr></hr>
+        <div class="links">
+            <a href="/index.html" class="home">home</a>
+            <a href="/about.html" class="about">about</a>
+            <a href="/contact.html" class="contact">contact</a>
+        </div>
+        <hr></hr>
+
     </div>
-   <h3> Minor Programs </h3>
-    <ul>
-      <li>Minor in Communication Design</li>
-      <li>Minor in CS and Information Systems </li>
-     </ul>
-  
+    <div class="body">
+        <br>
+        <div class="cards">
+            <div class="card">
+                <div class="image">
+                    <img src="/images/armando.jpeg" alt="armando",class = armando width="25%" height="25%">
+                </div>
+                <div class="name">
+                    <p>Armando</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image">
+                    <img src="/images/daniel.jpeg" alt="daniel", class = daniel width="25%" height="25%">
+                </div>
+                <div class="name">
+                    <p>Daniel</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image">
+                    <img src="/images/sergio_zavala.jpeg" alt="sergio" class="sergio" width="25%" height="25%">
+                </div>
+                <div class="name">
+                    <p>Sergio</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image">
+                    <img src="/images/eduardo.jpeg" alt="eduardo" class="eduardo" width="25%" height="25%">
+                </div>
+                <div class="name">
+                    <p>Eduardo</p>
+                </div>
+            </div>
+        </div>
+        <br>
+        <p>Hello peeps and welcome to how to get rich quick pyramid scheme </p>
+        <p><em>"A day without sunshine is like, you know, night"</em> <br> - Steve Marden</p>
+        <br>
+    </div>
+    
+    <hr></hr>
+    <img src="/images/image.png" alt="CSUMB Logo" width="10%" height="10%">
+    CST336 Internet Programming. 2025&#169; Zavala, Solano, Sanchez, Vega <br> <strong>Disclaimer: </strong> The information in this webpage is fictitious. <br>
+    It is used for acadmic purposes only.
+    <br>
 </body>
 </html>
