--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <img src="/images/armando.jpeg" alt="armando",class = armando width="25%" height="25%">
                 </div>
                 <div class="name">
-                    <p>Armando</p>
+                    <p>Armando Vega</p>
                 </div>
             </div>
             <div class="card">
@@ -35,7 +35,7 @@
                     <img src="/images/daniel.jpeg" alt="daniel", class = daniel width="25%" height="25%">
                 </div>
                 <div class="name">
-                    <p>Daniel</p>
+                    <p>Daniel Solano</p>
                 </div>
             </div>
             <div class="card">
@@ -43,7 +43,7 @@
                     <img src="/images/sergio_zavala.jpeg" alt="sergio" class="sergio" width="25%" height="25%">
                 </div>
                 <div class="name">
-                    <p>Sergio</p>
+                    <p>Sergio Zavala</p>
                 </div>
             </div>
             <div class="card">
@@ -51,20 +51,30 @@
                     <img src="/images/eduardo.jpeg" alt="eduardo" class="eduardo" width="25%" height="25%">
                 </div>
                 <div class="name">
-                    <p>Eduardo</p>
+                    <p>Eduardo Sanchez</p>
                 </div>
             </div>
         </div>
-        <br>
-        <p>Hello peeps and welcome to how to get rich quick pyramid scheme </p>
-        <p><em>"A day without sunshine is like, you know, night"</em> <br> - Steve Marden</p>
+        <div class="intro">
+            <br>
+            <p>Hello peeps and welcome to how to get rich quick pyramid scheme </p>
+        </div>
+        <div class="quote">
+            <p><em>"A day without sunshine is like, you know, night"</em> <br> - Steve Marden</p>
+            <br>
+        </div>
+    </div>
+    <hr></hr>
+
+    <div class="footer">
+        <div class="image">
+            <img src="/images/image.png" alt="CSUMB Logo" width="10%" height="10%">
+        </div>
+        <div class="label">
+            <p>CST336 Internet Programming. 2025&#169; Zavala, Solano, Sanchez, Vega <br> <strong>Disclaimer: </strong> The information in this webpage is fictitious. <br>
+                It is used for acadmic purposes only.</p>
+        </div>
         <br>
     </div>
-    
-    <hr></hr>
-    <img src="/images/image.png" alt="CSUMB Logo" width="10%" height="10%">
-    CST336 Internet Programming. 2025&#169; Zavala, Solano, Sanchez, Vega <br> <strong>Disclaimer: </strong> The information in this webpage is fictitious. <br>
-    It is used for acadmic purposes only.
-    <br>
 </body>
 </html>
