--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Team 19</h1>
     <hr></hr>
-    <a href="/labs/index.html" class="home">home</a>
-    <a href="/labs/about.html" class="about">about</a>
-    <a href="/labs/contact.html" class="contact">contact</a>
+    <a href="/index.html" class="home">home</a>
+    <a href="/about.html" class="about">about</a>
+    <a href="/contact.html" class="contact">contact</a>
     <p></p>
     <table>
         <tr> <th> Programming Languages </th> <th>Years Experience</th></tr>
