--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Team 19</h1>
     <hr></hr>
-    <a href="/labs/index.html" class="home">home</a>
-    <a href="/labs/about.html" class="about">about</a>
-    <a href="/labs/contact.html" class="contact">contact</a>
+    <a href="/index.html" class="home">home</a>
+    <a href="/about.html" class="about">about</a>
+    <a href="/contact.html" class="contact">contact</a>
     <br>
     <hr></hr>
     CST336 Internet Programming. 2025&#169; Zavala, Solano, Sanchez, Vega <br> <strong>Disclaimer: </strong> The information in this webpage is fictitious. <br>
