modified contact and about html

--- a/about.html
+++ b/about.html
@@ -3,33 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/index.css">
     <title>Document</title>
 </head>
-<body>
-    <h1>Team 19</h1>
-    <hr></hr>
-    <a href="/index.html" class="home">home</a>
-    <a href="/about.html" class="about">about</a>
-    <a href="/contact.html" class="contact">contact</a>
-    <p></p>
-    <table>
-        <tr> <th> Programming Languages </th> <th>Years Experience</th></tr>
-        <tr><td>Java</td> <td>4</td> </tr>
-        <tr><td>Python</td> <td>3</td></tr>
-        <tr> <td>C++</td> <td>3</td></tr>
 
-    </table>
-    <h3>Our Common Hobbies:</h3>
-    <ul>
-        <li>Video Games: We all play different sorts of games, but we all enjoy a good game of Valorant.</li>
-        <li>Sports: We all love a good game of soccer!</li>
-        <li>Hiking: We enjoy interacting with nature through hiking.</li>
-    </ul>
-    <br>
+
+<body>
+    
+    <div class="header">
+     <h1 class = "">Team 19</h1>
+    </div>
+   <hr></hr>
+    <div class="links">
+        <a href="/index.html" class="home">home</a>
+        <a href="/about.html" class="about">about</a>
+        <a href="/contact.html" class="contact">contact</a>
+    </div>
     <hr></hr>
-    CST336 Internet Programming. 2025&#169; Zavala, Solano, Sanchez, Vega <br> <strong>Disclaimer: </strong> The information in this webpage is fictitious. <br>
-    It is used for acadmic purposes only.
-    <br>
-    <img src="/labs/images/image.png" alt="CSUMB Logo" width="10%" height="10%">
+
+<div class = "body">
+ 
+        <div class = "body2">
+            <table class = "table-container">
+                <tr class = "heading_table"> <th> Programming Languages </th> <th>Years Experience</th></tr>
+                <tr class="text" ><td>Java</td> <td>4</td> </tr>
+                <tr class = "text"><td>Python</td> <td>3</td></tr>
+                <tr class = "text"> <td>C++</td> <td>3</td></tr>
+            </table>
+        </div>
+        
+    <div class = "text">
+        <h3>Our Common Hobbies:</h3>
+        <ul class="bullet_points">
+            <li>Video Games: We all play different sorts of games, but we all enjoy a good game of Valorant.</li>
+            <li>Sports: We all love a good game of soccer!</li>
+            <li>Hiking: We enjoy interacting with nature through hiking.</li>
+        </ul>
+    </div>
+
+</div>
+    <hr></hr>
+   <div class="footer">
+        <div class="image">
+            <img src="/images/image.png" alt="CSUMB Logo" width="10%" height="10%">
+        </div>
+        <div class="label">
+            <p>CST336 Internet Programming. 2025&#169; Zavala, Solano, Sanchez, Vega <br> <strong>Disclaimer: </strong> The information in this webpage is fictitious. <br>
+                It is used for acadmic purposes only.</p>
+        </div>
+        <br>
+    </div>
 </body>
 </html>
