--- a/contact.html
+++ b/contact.html
@@ -3,19 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
+    <link rel="stylesheet" href="styles/index.css">
+
 </head>
 <body>
-    <h1>Team 19</h1>
-    <hr></hr>
-    <a href="/index.html" class="home">home</a>
-    <a href="/about.html" class="about">about</a>
-    <a href="/contact.html" class="contact">contact</a>
-    <br>
-    <hr></hr>
-    CST336 Internet Programming. 2025&#169; Zavala, Solano, Sanchez, Vega <br> <strong>Disclaimer: </strong> The information in this webpage is fictitious. <br>
-    It is used for acadmic purposes only.
-    <br>
-    <img src="/labs/images/image.png" alt="CSUMB Logo" width="10%" height="10%">
+    <div class="header">
+        <h1>Team 19</h1>
+        <hr></hr>
+        <div class="links">
+            <a href="" class="home">home</a>
+            <a href="/about.html" class="about">about</a>
+            <a href="/contact.html" class="contact">contact</a>
+        </div>
+        <hr></hr>
+
+    </div>
+    <div class="body">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfLjlNX8ynR8A2bYv5S63HgXPw9J5j7k6jyvul0k-Ts0_XwuA/viewform?embedded=true" width="100%" height="100%" **scrolling="no"** frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+    <div class="footer">
+        <div class="image">
+            <img src="/images/image.png" alt="CSUMB Logo" width="10%" height="10%">
+        </div>
+        <div class="label">
+            <p>CST336 Internet Programming. 2025&#169; Zavala, Solano, Sanchez, Vega <br> <strong>Disclaimer: </strong> The information in this webpage is fictitious. <br>
+                It is used for acadmic purposes only.</p>
+        </div>
+        <br>
+    </div>
 </body>
 </html>
