eveything else that was missing

--- a/about.html
+++ b/about.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
-    <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>About</title>
 </head>
 
 
 <body>
-    
     <div class="header">
-     <h1 class = "">Team 19</h1>
+        <h1 class = "google-font">Team 19</h1>
     </div>
    <hr></hr>
     <div class="links">
         <a href="/index.html" class="home">home</a>
-        <a href="/about.html" class="about">about</a>
+        <a id = "current" href="/about.html" class="about">about</a>
         <a href="/contact.html" class="contact">contact</a>
     </div>
     <hr></hr>
