--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
-    <title>Team 19</title>
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">\
+
+    <title>Home</title>
+
 </head>
 <body>
     <div class="header">
-        <h1>Team 19</h1>
+        <h1 class = "google-font">Team 19</h1>
         <hr></hr>
         <div class="links">
-            <a href="/index.html" class="home">home</a>
+            <a id = "current" href="/index.html" class="home">home</a>
             <a href="/about.html" class="about">about</a>
             <a href="/contact.html" class="contact">contact</a>
         </div>
@@ -57,7 +62,7 @@
         </div>
         <div class="intro">
             <br>
-            <p>Hello peeps and welcome to how to get rich quick pyramid scheme </p>
+            <p>Hello peeps and welcome to the team 19's web page</p>
         </div>
         <div class="quote">
             <p><em>"A day without sunshine is like, you know, night"</em> <br> - Steve Marden</p>
