--- a/contact.html
+++ b/contact.html
@@ -6,21 +6,30 @@
     <title>Contact</title>
     <link rel="stylesheet" href="styles/index.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
-        <h1>Team 19</h1>
+        <h1 class = "google-font">Team 19</h1>
         <hr></hr>
         <div class="links">
-            <a href="" class="home">home</a>
+            <a href="/index.html" class="home">home</a>
             <a href="/about.html" class="about">about</a>
-            <a href="/contact.html" class="contact">contact</a>
+            <a id = "current" href="/contact.html" class="contact">contact</a>
         </div>
         <hr></hr>
 
     </div>
-    <div class="body">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfLjlNX8ynR8A2bYv5S63HgXPw9J5j7k6jyvul0k-Ts0_XwuA/viewform?embedded=true" width="100%" height="100%" **scrolling="no"** frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+    <div class="body3">
+        <iframe class="frame-container"
+            src="https://docs.google.com/forms/d/e/1FAIpQLSfLjlNX8ynR8A2bYv5S63HgXPw9J5j7k6jyvul0k-Ts0_XwuA/viewform?embedded=true" 
+            width="640" height="686" 
+            **scrolling="no"** frameborder="0" 
+            marginheight="0" marginwidth="0">Loading…
+        </iframe>
+    </div>
     <div class="footer">
         <div class="image">
             <img src="/images/image.png" alt="CSUMB Logo" width="10%" height="10%">
