--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
     <div class="body3">
         <iframe class="frame-container"
             src="https://docs.google.com/forms/d/e/1FAIpQLSfLjlNX8ynR8A2bYv5S63HgXPw9J5j7k6jyvul0k-Ts0_XwuA/viewform?embedded=true" 
-            width="640" height="686" 
-            **scrolling="no"** frameborder="0" 
+            width="100%" height="680" 
+            frameborder="0" 
             marginheight="0" marginwidth="0">Loading…
         </iframe>
     </div>
